# tcelm_v0

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
config/: corpus_v0_3b.json
src/tcelm_corpus/: config.py  decontaminate.py  dedup.py  ingest.py  normalize.py  reports.py  runner.py  schema.py  segmentation.py  splits.py  stats.py  tokenizer.py  views.py
src/tcelm_corpus/adapters/: __init__.py  base.py  books.py  scientific.py  stackexchange.py  technical.py
src/tcelm_corpus/cleaners/: __init__.py  books.py  cccc.py  educational.py  generic.py  government_legal.py  scientific.py  stackexchange.py  technical.py  wikimedia.py
src/tcelm_corpus/stages/: __init__.py  base_stage.py  s01_ingest.py  s02_select_pool.py  s03_normalize_clean.py  s04_segment.py  s05_dedup.py  s06_decontaminate.py  s07_split.py  s08_train_tokenizer.py  s09_tokenize_select.py  s10_freeze.py  s11_generate_views.py  s12_stats_reports.py
src/tcelm_corpus/storage/: checkpoint.py  manifest.py  parquet_io.py
tests/: test_adapters.py  test_cleaners.py  test_decontaminate.py  test_dedup.py  test_full_pipeline.py  test_ingest.py  test_lsh.py  test_normalize.py  test_segmentation.py  test_splits.py  test_stage11_freeze_binding.py  test_stages_persistence.py  test_tokenizer.py  test_views.py
